--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,10 @@
+# Azure OpenAI Configuration
+
 AZURE_DEPLOYMENT_NAME=YOUR_DEPLOYMENT_NAME
 AZURE_OPENAI_API_KEY=YOUR_API_KEY
 AZURE_OPENAI_ENDPOINT=YOUR_ENDPOINT
+
+# Server Configuration
+PORT=3000
+FRONTEND_URL=http://localhost:8000
+BACKEND_URL=http://localhost:3000
