--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,11 @@
 # Azure OpenAI Configuration
-
-AZURE_DEPLOYMENT_NAME=YOUR_DEPLOYMENT_NAME
-AZURE_OPENAI_API_KEY=YOUR_API_KEY
-AZURE_OPENAI_ENDPOINT=YOUR_ENDPOINT
+AZURE_OPENAI_ENDPOINT=https://your-resource.openai.azure.com/
+AZURE_OPENAI_API_KEY=your-api-key-here
+AZURE_DEPLOYMENT_NAME=your-deployment-name
 
 # Server Configuration
 PORT=3000
-FRONTEND_URL=http://localhost:8000
-BACKEND_URL=http://localhost:3000
+
+# Frontend URLs (for CORS configuration)
+FRONTEND_URL=http://localhost:8080
+FRONTEND_URL_AZURE=https://your-app-name.azurewebsites.net
