--- a/azure.env.example
+++ b/azure.env.example
@@ -1,10 +1,13 @@
 # Azure App Service Environment Variables
-# Configure these in the Azure Portal under Configuration -> Application Settings
+# Configure these in the Azure Portal: App Service -> Environment variables -> App settings
 
 # Azure OpenAI Configuration
-AZURE_OPENAI_ENDPOINT=your-azure-openai-endpoint-url
-AZURE_OPENAI_API_KEY=your-azure-openai-api-key
+AZURE_OPENAI_ENDPOINT=https://your-resource.openai.azure.com/
+AZURE_OPENAI_API_KEY=your-api-key-here
 AZURE_DEPLOYMENT_NAME=your-deployment-name
+
+# Frontend URLs for CORS (replace with your actual Azure App Service URL)
+FRONTEND_URL_AZURE=https://your-app-name.azurewebsites.net
 
 # Node.js Environment
 NODE_ENV=production
