Add GitHub Pages deployment support with Azure backend integration

--- a/azure.env.example
+++ b/azure.env.example
@@ -6,8 +6,9 @@ AZURE_OPENAI_ENDPOINT=https://your-resource.openai.azure.com/
 AZURE_OPENAI_API_KEY=your-api-key-here
 AZURE_DEPLOYMENT_NAME=your-deployment-name
 
-# Frontend URLs for CORS (replace with your actual Azure App Service URL)
+# Frontend URLs for CORS (replace with your actual URLs)
 FRONTEND_URL_AZURE=https://your-app-name.azurewebsites.net
+FRONTEND_URL_GITHUB_PAGES=https://your-username.github.io/your-repo-name
 
 # Node.js Environment
 NODE_ENV=production
