--- a/web.config
+++ b/web.config
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <system.webServer>
-    <!-- Enable serving static files -->
+    <!-- Serve static files first -->
     <staticContent>
       <mimeMap fileExtension=".js" mimeType="application/javascript" />
       <mimeMap fileExtension=".css" mimeType="text/css" />
       <mimeMap fileExtension=".json" mimeType="application/json" />
+      <mimeMap fileExtension=".woff" mimeType="application/font-woff" />
+      <mimeMap fileExtension=".woff2" mimeType="application/font-woff2" />
     </staticContent>
     
     <!-- Handle Node.js application -->
@@ -22,10 +24,19 @@
           <action type="Rewrite" url="vibe-backend/server.js" />
         </rule>
         
-        <!-- Serve static files -->
-        <rule name="StaticContent" stopProcessing="true">
-          <match url="^(css|js|vibe-app)/.*" />
+        <!-- Serve static files directly -->
+        <rule name="StaticFiles" stopProcessing="true">
+          <match url="^(css|js|vibe-app)/.*$" />
+          <conditions>
+            <add input="{REQUEST_FILENAME}" matchType="IsFile" />
+          </conditions>
           <action type="None" />
+        </rule>
+        
+        <!-- Serve index.html for root -->
+        <rule name="Root" stopProcessing="true">
+          <match url="^$" />
+          <action type="Rewrite" url="index.html" />
         </rule>
         
         <!-- Default to index.html for SPA -->
@@ -34,6 +45,7 @@
           <conditions logicalGrouping="MatchAll">
             <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
             <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
+            <add input="{REQUEST_URI}" pattern="^/api/" negate="true" />
           </conditions>
           <action type="Rewrite" url="index.html" />
         </rule>
@@ -44,7 +56,7 @@
     <httpProtocol>
       <customHeaders>
         <add name="X-Content-Type-Options" value="nosniff" />
-        <add name="X-Frame-Options" value="DENY" />
+        <add name="X-Frame-Options" value="SAMEORIGIN" />
         <add name="X-XSS-Protection" value="1; mode=block" />
       </customHeaders>
     </httpProtocol>
