--- a/package.json
+++ b/package.json
@@ -6,11 +6,18 @@
   "scripts": {
     "start": "node vibe-backend/server.js",
     "dev": "cd vibe-backend && npm run dev",
-    "install-backend": "cd vibe-backend && npm install"
+    "install-backend": "cd vibe-backend && npm install",
+    "postinstall": "npm run install-backend",
+    "build": "npm run install-backend"
   },
   "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=8.0.0"
+    "node": "22.x",
+    "npm": ">=10.0.0"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1"
   },
   "repository": {
     "type": "git",
