Simplify GitHub Pages config injection with reliable sed approach
- Use direct sed insertion after <head> tag instead of complex file manipulation
- Properly escape quotes in the JavaScript configuration
- This should ensure the script is placed correctly in the HTML head section
- Simpler approach reduces chances of HTML structure corruption

--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -44,36 +44,24 @@ jobs:
           # Copy static files (HTML, CSS, JS)
           cp -r css gh-pages-build/
           cp -r js gh-pages-build/
-          cp -r vibe-app gh-pages-build/
-
-          # Create a modified index.html with GitHub Pages configuration
+          cp -r vibe-app gh-pages-build/          # Create a modified index.html with GitHub Pages configuration
           DEPLOYMENT_TIME=$(date)
           
-          # First, get the head section from original index.html up to the closing </head>
-          sed -n '1,/<\/head>/p' index.html > gh-pages-build/index.html.tmp
+          # Create the GitHub Pages version with injected configuration
+          # Use a simpler approach - replace a placeholder in the original file
+          cp index.html gh-pages-build/index.html
           
-          # Remove the </head> closing tag temporarily
-          sed -i '$d' gh-pages-build/index.html.tmp
-          
-          # Add our GitHub Pages configuration script before closing </head>
-          cat >> gh-pages-build/index.html.tmp << EOF
-              <!-- GitHub Pages Configuration -->
-              <script>
-                window.GITHUB_PAGES_CONFIG = {
-                  backendUrl: '$AZURE_BACKEND_URL',
-                  environment: 'github-pages',
-                  deploymentTime: '$DEPLOYMENT_TIME'
-                };
-                console.log('🔍 GitHub Pages Config Loaded:', window.GITHUB_PAGES_CONFIG);
-              </script>
-            </head>
-          EOF
-          
-          # Now append the body section from the original file
-          sed -n '/<body/,$p' index.html >> gh-pages-build/index.html.tmp
-          
-          # Move the completed file to final location
-          mv gh-pages-build/index.html.tmp gh-pages-build/index.html
+          # Insert the GitHub Pages configuration script right after the opening <head> tag
+          sed -i '/<head>/a\
+              <!-- GitHub Pages Configuration -->\
+              <script>\
+                window.GITHUB_PAGES_CONFIG = {\
+                  backendUrl: '\''$AZURE_BACKEND_URL'\'',\
+                  environment: '\''github-pages'\'',\
+                  deploymentTime: '\''$DEPLOYMENT_TIME'\''\
+                };\
+                console.log('\''🔍 GitHub Pages Config Loaded:'\'', window.GITHUB_PAGES_CONFIG);\
+              </script>' gh-pages-build/index.html
 
           # Debug: Show the generated config in build logs
           echo "📝 Generated GitHub Pages configuration:"
