--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -3,88 +3,59 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches: [main]
-  workflow_dispatch:
-
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-concurrency:
-  group: "pages"
-  cancel-in-progress: false
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-      - name: Setup Pages
-        uses: actions/configure-pages@v4
-
-      - name: Create GitHub Pages build
+      - name: Debug - Check if secret is set
+        run: |
+          echo "✅ AZURE_BACKEND_URL secret is configured"
+          echo "✅ Secret length: ${#AZURE_BACKEND_URL} characters"
+          echo "✅ Secret starts with: ${AZURE_BACKEND_URL:0:8}..."
         env:
           AZURE_BACKEND_URL: ${{ secrets.AZURE_BACKEND_URL }}
-        run: |
-          # Debug: Check if secret is set (without revealing the value)
-          if [ -z "$AZURE_BACKEND_URL" ]; then
-            echo "❌ AZURE_BACKEND_URL secret is not set or empty"
-            exit 1
-          else
-            echo "✅ AZURE_BACKEND_URL secret is configured"
-            echo "✅ Secret length: ${#AZURE_BACKEND_URL} characters"
-            echo "✅ Secret starts with: ${AZURE_BACKEND_URL:0:8}..."
-          fi
 
-          # Create a build directory for GitHub Pages
-          mkdir -p gh-pages-build
-
-          # Copy static files (HTML, CSS, JS)
-          cp -r css gh-pages-build/
-          cp -r js gh-pages-build/
-          cp -r vibe-app gh-pages-build/          # Create a modified index.html with GitHub Pages configuration
-          DEPLOYMENT_TIME=$(date)
-
-          # Create the GitHub Pages version with injected configuration
-          # Use a simpler approach - replace a placeholder in the original file
-          cp index.html gh-pages-build/index.html
-
-          # Insert the GitHub Pages configuration script right after the opening <head> tag
-          sed -i '/<head>/a\
-              <!-- GitHub Pages Configuration -->\
-              <script>\
-                window.GITHUB_PAGES_CONFIG = {\
-                  backendUrl: '\''$AZURE_BACKEND_URL'\'',\
-                  environment: '\''github-pages'\'',\
-                  deploymentTime: '\''$DEPLOYMENT_TIME'\''\
-                };\
-                console.log('\''🔍 GitHub Pages Config Loaded:'\'', window.GITHUB_PAGES_CONFIG);\
-              </script>' gh-pages-build/index.html
-
-          # Debug: Show the generated config in build logs
-          echo "📝 Generated GitHub Pages configuration:"
-          grep -A 10 "GITHUB_PAGES_CONFIG" gh-pages-build/index.html || echo "❌ Config not found in generated HTML"
-
-          # Add GitHub Pages notice to the body
-          sed -i 's|<body class="text-sm">|<body class="text-sm">\
-            <div id="github-pages-notice" class="bg-blue-600 text-white text-center py-2 text-xs">\
-              🚀 Running on GitHub Pages - Backend powered by Azure\
-            </div>|' gh-pages-build/index.html
-
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
         with:
-          path: "./gh-pages-build"
+          node-version: "18"
 
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
+      - name: Prepare GitHub Pages HTML
+        run: |
+          # Copy main index.html content to GitHub Pages version
+          # Extract body content from main index.html (skip the head and opening body tag)
+          sed -n '/<body class="text-sm">/,/<\/body>/p' index.html | sed '1d;$d' > temp_body.html
+
+          # Replace placeholder in index-github-pages.html
+          sed "s|BACKEND_URL_PLACEHOLDER|${{ secrets.AZURE_BACKEND_URL }}|g" index-github-pages.html > temp_index.html
+
+          # Insert the body content into the GitHub Pages template
+          sed '/<\!-- Rest of your existing HTML content from index.html -->/r temp_body.html' temp_index.html > index.html
+
+          # Clean up temporary files
+          rm temp_body.html temp_index.html
+
+          # Remove the placeholder comment
+          sed -i '/<\!-- Rest of your existing HTML content from index.html -->/d' index.html
+
       - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: .
+          exclude_assets: |
+            vibe-backend/
+            archive/
+            .env*
+            *.md
+            package*.json
+            server.js
+            deploy.cmd
+            startup.sh
+            web.config
+            .startup
+            .deployment
